--- a/App/package.json
+++ b/App/package.json
@@ -1,9 +1,12 @@
 {
-  "name"    : "myapp",
-  "version" : "1.1.0",
-  "main"    : "./main.js",
+  "name": "myapp",
+  "version": "1.1.0",
+  "main": "./main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager ./Electron MyApp --platform=win32 --arch=x64"
+    "build": "electron-packager . MyApp --name=MyApp --version=1.1.0 --platform=all --arch=x64 --overwrite"
+  },
+  "dependencies": {
+    "electron-editor-context-menu": "^1.1.1"
   }
- }
+}
